--- a/README
+++ b/README
@@ -18,4 +18,4 @@ Instructions for use:
     "NYT" :  {"Date Scraped": "2022-12-01 20:52:33.116252", "San Marino": "0", "Brunei": "0", "Hong Kong": "16.1", "South Korea": "49.3", "Japan": "143.1", "Palau": "0", "New Zealand": "4.3", "France": "62.7", "Andorra": "0.1", "Monaco": "0"}
                 
 3. Display the Data                
-  - Executing the displayData3.py script will display three plots. The top plot shows the daily death rates and the middle plot shows cumulative death rates from Worldometer for 20 countries, and the bottom plot shows the daily death rates from NYT for 10 countries. Each plot has an interactive legend where users can specify which continent or region they want to see by clicking the values in the legend.
+  - Executing the displayData3.py script will display three plots. The top plot shows the daily death rates from 20 countries from Wordlometer and the middle plot shows cumulative death rates from Worldometer for the same 20 countries, and the bottom plot shows the daily death rates from NYT for 10 countries. Each plot has an interactive legend where users can specify which continent or region they want to see by clicking the values in the legend.
